--- a/flutter_events/android/build.gradle
+++ b/flutter_events/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 
@@ -15,7 +16,7 @@ allprojects {
         jcenter()
     }
 }
-
+7
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
